--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,42 @@
+body {
+    font-size: 18px;
+    line-height: 1.8;
+}
+
+h1 {
+      font-size: 50px;
+}
+
+h2 {
+      font-size: 36px;
+}
+
+header {
+     background-color: #3B4CCA;
+     color: #FFDE00;
+     text-align: center;
+}
+
+.section {
+      background-color: #FFDE00;
+      color: #3B4CCA;
+      padding: 25px;
+}
+
+.sectioncolor2 {
+      background-color: #3B4CCA;
+      color: #FFDE00;
+      padding: 25px;
+}
+
+footer {
+      background-color: #B3A125;
+      color: #FFDE00;
+      text-align: center;
+      font-size: 23px;
+}
+
+
 /* The hero image */
 .hero-image {
     /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
